soap2rest fixes - fix usage/avg calculations